# gmail-actions

./: .gitignore  CREDENTIALS_SETUP.md  README.md  config.py  database.py  fetch_emails.py  gmail_auth.py  pyproject.toml  requirements.txt  rule_processor.py  rules.json
tests/: test_database.py  test_integration.py  test_rule_processor.py
